_2009_03_04__20_02_21_ Chi-Hsiu Liang

  * The reservoir grain approach now works. This is a snapshot of it. The input file Acetyl_O2_association_mytest.xml
    explains how to use this method. Now it works on association reaction. However, there are things to do:
    1. AddReactionTerms for all other reaction types
    2. Change the way of calculating "loss of the reservoir entry" in collision operator from summation of Boltzmann weighted 
       upward and downward transition terms to only the summation of downward transition terms and then multiplied by equilibrium 
       constant. This way can avoid numerical error through the summation processes.

_2009_03_04__11_56_32_ Chi-Hsiu Liang

  * Construction of another path of reservoir state treatment on low and inactive grains. (still debugging)
    This path simply assumes the reservoir grain to behave Boltzmann, which act like a source term.
  * Moved     void MolecularComponent::normalizeCollisionOperator(); from  to void TMatrix::normalizeProbabilityMatrix();
  * Added routines --     virtual void Reaction::AddReactionTermsWithReservoirState() = 0;

2009-03-01 Struan Robertson

  * ReactionManager.cpp/IsomerizationReaction.cpp: Minor changes related to contracted basis set method.  

_2009_02_25__15_31_59_ Chi-Hsiu Liang

  * Updated a bit of the manual.

_2009_02_25__11_28_06_ Chi-Hsiu Liang

  * Fixed compile problem in Cygwin. Converted some size_type to size_t.
    Reference: C++ International Standard clause 20.1.5.4. (part)
    The typedef members pointer, const_pointer, size_type, and difference_type are required to be T*, T const*, size_t, 
    and ptrdiff_t, respectively.

_2009_02_24__16_16_14_ Chi-Hsiu Liang

  * Moved countDimerCellDOS() to the end of MolecularComponent
  * Removed  m_pDensityOfStatesCalculator variable from MolecularComponent as this will be read in from XML and use directly.
  * Modified gDensityOfStates::calcDensityOfStates() so that it reads the DOSCMethod by itself.