@@ -35,7 +35,7 @@ Cell number = 38200, Grain number = 191
 Diagonlize the Reaction Operator -- Time elapsed: 0 seconds.
 
 In total, 2 temperature/concentration-pressure points calculated.
-In main: Finish Calculation -- Time elapsed: 147 seconds.
- -- Total time elapsed: 297 seconds.
+In main: Finish Calculation -- Time elapsed: 113 seconds.
+ -- Total time elapsed: 225 seconds.
 
 In main: System saved to out.xml
