@@ -24,7 +24,7 @@ No population was assigned, and there is no source term.
 Initialize a Boltzmann distribution in the first isomer.
 
 In total, 1 temperature/concentration-pressure points calculated.
-In main: Finish Calculation -- Time elapsed: 16 seconds.
- -- Total time elapsed: 20 seconds.
+In main: Finish Calculation -- Time elapsed: 10 seconds.
+ -- Total time elapsed: 12 seconds.
 
 In main: System saved to out.xml
